--- a/join.html
+++ b/join.html
@@ -13,6 +13,7 @@
       <li><a href="index.html">首页</a></li>
       <li><a href="about.html">关于</a></li>
       <li><a href="tasks.html">任务池</a></li>
+      <li><a href="kanban.html">看板</a></li>
       <li><a href="join.html">加入我们</a></li>
     </ul>
   </nav>
