--- a/tasks.html
+++ b/tasks.html
@@ -4,149 +4,382 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>任务池 - Grassroots Project</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      line-height: 1.6;
+      color: #333;
+      background: #f5f5f5;
+      padding: 20px;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #1a1a1a;
+    }
+
+    .filters {
+      display: flex;
+      gap: 10px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
+    .filter-btn {
+      padding: 8px 16px;
+      border: 2px solid #e0e0e0;
+      background: white;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    .filter-btn:hover, .filter-btn.active {
+      background: #f7931a;
+      color: white;
+      border-color: #f7931a;
+    }
+
+    .task-list {
+      display: grid;
+      gap: 20px;
+    }
+
+    .task-card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .task-card h3 {
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+    }
+
+    .task-card h3 a {
+      color: #1a1a1a;
+      text-decoration: none;
+    }
+
+    .task-card h3 a:hover {
+      color: #f7931a;
+    }
+
+    .task-meta {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      margin-bottom: 10px;
+    }
+
+    .task-meta span {
+      padding: 4px 12px;
+      border-radius: 12px;
+      color: white;
+      font-size: 0.85rem;
+    }
+
+    .task-time {
+      color: #666;
+      font-size: 0.9rem;
+      margin-bottom: 8px;
+    }
+
+    .task-description {
+      color: #333;
+      margin-bottom: 10px;
+      white-space: pre-wrap;
+    }
+
+    .task-assignee {
+      color: #666;
+      font-size: 0.9rem;
+    }
+
+    .loading, .no-tasks {
+      text-align: center;
+      padding: 40px;
+      color: #666;
+    }
+
+    .bg-red-500 { background: #d73a4a; }
+    .bg-yellow-500 { background: #fbca04; }
+    .bg-green-500 { background: #008672; }
+    .bg-purple-500 { background: #7057ff; }
+    .bg-gray-500 { background: #6e7781; }
+
+    .create-task {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .create-task a {
+      display: inline-block;
+      padding: 12px 24px;
+      background: #f7931a;
+      color: white;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+
+    .create-task a:hover {
+      background: #e8830f;
+    }
+
+    .footer-note {
+      text-align: center;
+      margin-top: 30px;
+      color: #666;
+      font-size: 0.9rem;
+    }
+
+    .footer-note a {
+      color: #f7931a;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
-  <nav>
-    <div class="logo">Grassroots Project</div>
-    <ul>
-      <li><a href="index.html">首页</a></li>
-      <li><a href="about.html">关于</a></li>
-      <li><a href="tasks.html">任务池</a></li>
-      <li><a href="join.html">加入我们</a></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <h1>🎯 Grassroots 任务池</h1>
 
-  <main>
-    <h1>任务池</h1>
-
-    <p>所有人都可以添加任务。选择一个任务，开始协作。</p>
-
-    <a href="join.html" class="btn">加入后认领任务</a>
-
-    <hr>
-
-    <h2>P0 - 必须先做（启动阶段）</h2>
-
-    <div class="card">
-      <h3>T-001: 撰写第一个钩子文案</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>文案 | <strong>时间：</strong>2小时</p>
-      <p>500字以内，直击痛点："你努力过，但好像什么都没改变。不是你的问题。"包含不确定性声明</p>
+    <div class="create-task">
+      <a href="https://github.com/grassroots-project/tasks/issues/new?template=task_template.md" target="_blank">
+        + 添加任务
+      </a>
     </div>
 
-    <div class="card">
-      <h3>T-002: 设计第一个视频脚本</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>视频策划 | <strong>时间：</strong>4小时</p>
-      <p>3-5分钟，结构：痛点→三条腿→池塘模式→邀请。平台：B站/抖音/小红书</p>
+    <div class="filters">
+      <button class="filter-btn active" data-filter="all">全部</button>
+      <button class="filter-btn" data-filter="priority" data-value="p0">P0 必须先做</button>
+      <button class="filter-btn" data-filter="priority" data-value="p1">P1 重要</button>
+      <button class="filter-btn" data-filter="priority" data-value="p2">P2 探索</button>
+      <button class="filter-btn" data-filter="status" data-value="待领">待领</button>
+      <button class="filter-btn" data-filter="status" data-value="进行中">进行中</button>
     </div>
 
-    <div class="card">
-      <h3>T-003: 制作第一组图文笔记</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>文案/设计 | <strong>时间：</strong>3小时</p>
-      <p>小红书，3-5篇，覆盖不同痛点</p>
+    <div id="task-list" class="task-list">
+      <div class="loading">加载任务中...</div>
     </div>
 
-    <div class="card">
-      <h3>T-004: 列出20-30个潜在种子用户</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>社交 | <strong>时间：</strong>2小时</p>
-      <p>来源：现有关系网络、相关社群、主动联系</p>
+    <div class="footer-note">
+      <p>任务池基于 <a href="https://github.com/grassroots-project/tasks" target="_blank">GitHub Issues</a> 构建</p>
+      <p><a href="kanban.html">📋 查看看板视图</a></p>
     </div>
+  </div>
 
-    <div class="card">
-      <h3>T-005: 设计筛选问卷</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>文案 | <strong>时间：</strong>1小时</p>
-      <p>3-5个关键问题，必须问：接受不确定性、主动努力</p>
-    </div>
+  <script type="module">
+    // GitHub API 配置
+    const CONFIG = {
+      owner: 'grassroots-project',
+      repo: 'tasks'
+    };
 
-    <div class="card">
-      <h3>T-006: 完成3-5个种子用户的第一轮沟通</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>沟通 | <strong>时间：</strong>4小时</p>
-    </div>
+    const API_BASE = `https://api.github.com/repos/${CONFIG.owner}/${CONFIG.repo}`;
 
-    <div class="card">
-      <h3>T-008: 创建沟通群组</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>运营 | <strong>时间：</strong>1小时</p>
-      <p>Telegram/微信，群规则、欢迎语、FAQ</p>
-    </div>
+    // 获取所有 Issues（任务）
+    async function fetchTasks() {
+      try {
+        const response = await fetch(
+          `${API_BASE}/issues?state=open&sort=created&direction=desc&per_page=100`,
+          { headers: { 'Accept': 'application/vnd.github.v3+json' } }
+        );
+        if (!response.ok) throw new Error('Failed to fetch tasks');
+        return await response.json();
+      } catch (error) {
+        console.error('Error fetching tasks:', error);
+        return [];
+      }
+    }
 
-    <div class="card">
-      <h3>T-009: 设计贡献记录模板</h3>
-      <p><strong>优先级：</strong>P0 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>设计 | <strong>时间：</strong>2小时</p>
-      <p>手动记录，暂不上链</p>
-    </div>
+    // 解析任务标签
+    function parseTaskLabels(labels) {
+      const result = {
+        priority: null,
+        status: null,
+        skills: []
+      };
 
-    <hr>
+      for (const label of labels) {
+        const name = label.name;
+        if (['p0', 'p1', 'p2'].includes(name)) {
+          result.priority = name;
+        } else if (['待领', '进行中', '已完成'].includes(name)) {
+          result.status = name;
+        } else {
+          result.skills.push(name);
+        }
+      }
 
-    <h2>P1 - 重要但不紧急（1-2个月内）</h2>
+      return result;
+    }
 
-    <div class="card">
-      <h3>T-010: 设计一个简单的网站首页</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>设计/前端</p>
-      <p>展示：三条腿、池塘模式、任务池。静态网站即可（GitHub Pages/Vercel）</p>
-    </div>
+    // 从任务描述中提取字段
+    function parseTaskDescription(body) {
+      const result = {
+        description: '',
+        skills: '',
+        time: '',
+        links: '',
+        assignee: ''
+      };
 
-    <div class="card">
-      <h3>T-011: 搭建更正式的任务池系统</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>技术</p>
-      <p>考虑开源工具（Linear/Notion API）或自己开发简单界面</p>
-    </div>
+      if (!body) return result;
 
-    <div class="card">
-      <h3>T-012: 探索比特币链上记录方案</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>区块链</p>
-      <p>贡献记录的最小链上方案。成本和技术门槛评估</p>
-    </div>
+      const lines = body.split('\n');
+      let currentSection = null;
 
-    <div class="card">
-      <h3>T-013: 制作第二个深度视频（30-60分钟）</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>视频制作</p>
-      <p>详细解释三条腿的逻辑、池塘模式的协作案例</p>
-    </div>
+      for (const line of lines) {
+        if (line.startsWith('## ')) {
+          currentSection = line.slice(3).trim();
+        } else if (currentSection && line.trim()) {
+          switch (currentSection) {
+            case '任务描述':
+              result.description += line + '\n';
+              break;
+            case '技能要求':
+              result.skills = line.trim();
+              break;
+            case '预期时间':
+              result.time = line.trim();
+              break;
+            case '相关链接':
+              result.links = line.trim();
+              break;
+            case '领取':
+              result.assignee = line.trim();
+              break;
+          }
+        }
+      }
 
-    <div class="card">
-      <h3>T-014: 撰写5-10篇深度文章</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>写作</p>
-      <p>每篇文章聚焦一个核心观点。发布平台：公众号/知乎/少数派</p>
-    </div>
+      return result;
+    }
 
-    <div class="card">
-      <h3>T-015: 设计种子用户的邀请机制</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>运营</p>
-      <p>每个人可以邀请谁？怎么邀请？</p>
-    </div>
+    // 渲染任务卡片
+    function renderTaskCard(issue) {
+      const labels = parseTaskLabels(issue.labels);
+      const details = parseTaskDescription(issue.body);
 
-    <div class="card">
-      <h3>T-016: 复盘第一轮触达，优化渠道策略</h3>
-      <p><strong>优先级：</strong>P1 | <strong>状态：</strong>⬜ 待领 | <strong>技能：</strong>运营</p>
-      <p>哪个平台效果好？什么内容转化高？</p>
-    </div>
+      const priorityColors = {
+        p0: 'bg-red-500',
+        p1: 'bg-yellow-500',
+        p2: 'bg-green-500'
+      };
 
-    <hr>
+      const priorityText = {
+        p0: '必须先做',
+        p1: '重要不紧急',
+        p2: '探索性'
+      };
 
-    <h2>如何添加任务</h2>
+      const statusColors = {
+        待领: 'bg-purple-500',
+        进行中: 'bg-green-500',
+        已完成: 'bg-gray-500'
+      };
 
-    <p>任何人都可以添加任务。需要包含：</p>
+      return `
+        <div class="task-card">
+          <h3><a href="${issue.html_url}" target="_blank">${issue.title}</a></h3>
+          <div class="task-meta">
+            <span class="priority ${priorityColors[labels.priority] || 'bg-gray-500'}">
+              ${priorityText[labels.priority] || '未知优先级'}
+            </span>
+            <span class="status ${statusColors[labels.status] || 'bg-gray-500'}">
+              ${labels.status || '待领'}
+            </span>
+            ${labels.skills.length > 0 ? `
+              <span class="skills">
+                ${labels.skills.join(', ')}
+              </span>
+            ` : ''}
+          </div>
+          ${details.time ? `<div class="task-time">⏱ ${details.time}</div>` : ''}
+          ${details.description ? `<div class="task-description">${details.description.trim()}</div>` : ''}
+          ${details.assignee ? `<div class="task-assignee">👤 ${details.assignee}</div>` : ''}
+        </div>
+      `;
+    }
 
-    <ul class="bullet-list">
-      <li>任务编号（延续现有编号，如 T-017）</li>
-      <li>任务名称（简洁明确）</li>
-      <li>优先级（P0/P1/P2）</li>
-      <li>技能要求（需要什么技能）</li>
-      <li>预期时间（大概需要多久）</li>
-      <li>描述（具体要做什么）</li>
-    </ul>
+    // 渲染任务列表
+    function renderTaskList(tasks, filter = {}) {
+      let filteredTasks = tasks.filter(issue => !issue.pull_request);
 
-    <hr>
+      if (filter.priority) {
+        filteredTasks = filteredTasks.filter(issue =>
+          issue.labels.some(label => label.name === filter.priority)
+        );
+      }
 
-    <h2>当前焦点</h2>
+      if (filter.status) {
+        filteredTasks = filteredTasks.filter(issue =>
+          issue.labels.some(label => label.name === filter.status)
+        );
+      }
 
-    <p>本周核心任务：T-001, T-004, T-008</p>
+      if (filter.skill) {
+        filteredTasks = filteredTasks.filter(issue =>
+          issue.labels.some(label => label.name === filter.skill)
+        );
+      }
 
-    <a href="join.html" class="btn">加入后认领任务</a>
-  </main>
+      if (filteredTasks.length === 0) {
+        return '<p class="no-tasks">没有找到任务</p>';
+      }
 
-  <footer>
-    <p>© 2026 Grassroots Project</p>
-  </footer>
+      return filteredTasks.map(issue => renderTaskCard(issue)).join('');
+    }
+
+    let currentFilter = {};
+    let allTasks = [];
+
+    // 加载任务
+    async function loadTasks() {
+      const taskList = document.getElementById('task-list');
+      allTasks = await fetchTasks();
+      taskList.innerHTML = renderTaskList(allTasks, currentFilter);
+    }
+
+    // 过滤按钮点击事件
+    document.querySelectorAll('.filter-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        // 更新按钮状态
+        document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
+        btn.classList.add('active');
+
+        // 设置过滤条件
+        const filterType = btn.dataset.filter;
+        if (filterType === 'all') {
+          currentFilter = {};
+        } else {
+          currentFilter = {
+            [filterType]: btn.dataset.value
+          };
+        }
+
+        // 重新渲染
+        document.getElementById('task-list').innerHTML = renderTaskList(allTasks, currentFilter);
+      });
+    });
+
+    // 初始加载
+    loadTasks();
+  </script>
 </body>
 </html>
