--- a/kanban.html
+++ b/kanban.html
@@ -190,8 +190,10 @@
     function parseTaskLabels(labels) {
       const result = { priority: null, status: null, skills: [] };
       for (const label of labels) {
-        if (['p0', 'p1', 'p2'].includes(label.name)) {
-          result.priority = label.name;
+        const nameLower = label.name.toLowerCase();
+        // 兼容大小写：P0/p0, P1/p1, P2/p2
+        if (['p0', 'p1', 'p2'].includes(nameLower)) {
+          result.priority = nameLower;
         } else if (['待领', '进行中', '已完成'].includes(label.name)) {
           result.status = label.name;
         }
