--- a/kanban.html
+++ b/kanban.html
@@ -15,155 +15,194 @@
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
       color: #333;
-      background: #f5f5f5;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       padding: 20px;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 1400px;
+      margin: 0 auto;
     }
 
     h1 {
       text-align: center;
       margin-bottom: 30px;
-      color: #1a1a1a;
+      color: white;
+      font-size: 2.2rem;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
     }
 
     .kanban {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 20px;
-      max-width: 1400px;
-      margin: 0 auto;
+      margin-bottom: 30px;
     }
 
     .column {
-      background: #e8e8e8;
-      padding: 15px;
-      border-radius: 8px;
-      min-height: 400px;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 20px;
+      border-radius: 16px;
+      min-height: 500px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.15);
+      backdrop-filter: blur(10px);
     }
 
     .column-header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 15px;
-      padding-bottom: 10px;
-      border-bottom: 2px solid #ccc;
+      margin-bottom: 20px;
+      padding-bottom: 15px;
+      border-bottom: 3px solid #e0e0e0;
     }
 
     .column h2 {
-      font-size: 1.1rem;
+      font-size: 1.3rem;
       color: #1a1a1a;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
 
     .task-count {
-      background: #666;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       color: white;
-      padding: 2px 10px;
-      border-radius: 10px;
-      font-size: 0.85rem;
+      padding: 4px 14px;
+      border-radius: 20px;
+      font-size: 0.9rem;
+      font-weight: 600;
     }
 
     .task-card {
       background: white;
-      padding: 15px;
-      border-radius: 6px;
+      padding: 16px;
+      border-radius: 10px;
       margin-bottom: 12px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
       cursor: pointer;
-      transition: transform 0.2s, box-shadow 0.2s;
+      transition: all 0.3s;
+      border: 2px solid transparent;
     }
 
     .task-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      transform: translateY(-4px) rotate(1deg);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      border-color: #667eea;
     }
 
     .task-title {
-      font-weight: bold;
-      margin-bottom: 8px;
+      font-weight: 600;
+      margin-bottom: 10px;
       color: #1a1a1a;
+      line-height: 1.4;
     }
 
     .task-meta {
       display: flex;
-      gap: 6px;
+      gap: 8px;
       flex-wrap: wrap;
+      align-items: center;
     }
 
     .badge {
-      padding: 2px 8px;
+      padding: 4px 10px;
       border-radius: 10px;
-      font-size: 0.75rem;
+      font-size: 0.8rem;
       color: white;
+      font-weight: 500;
     }
 
-    .p0 { background: #d73a4a; }
-    .p1 { background: #fbca04; }
-    .p2 { background: #008672; }
+    .p0 { background: linear-gradient(135deg, #ff6b6b 0%, #ee5a5a 100%); }
+    .p1 { background: linear-gradient(135deg, #feca57 0%, #ff9f43 100%); }
+    .p2 { background: linear-gradient(135deg, #48dbfb 0%, #0abde3 100%); }
 
     .loading {
       text-align: center;
-      padding: 40px;
-      color: #666;
+      padding: 60px;
+      color: rgba(255, 255, 255, 0.9);
+      font-size: 1.2rem;
     }
 
     .empty {
       text-align: center;
       color: #999;
-      padding: 20px;
+      padding: 30px;
       font-style: italic;
+      font-size: 0.95rem;
     }
 
     .footer-note {
       text-align: center;
-      margin-top: 30px;
+      padding: 20px;
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 12px;
       color: #666;
       font-size: 0.9rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
     .footer-note a {
-      color: #f7931a;
+      color: #667eea;
       text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s;
+    }
+
+    .footer-note a:hover {
+      color: #764ba2;
     }
 
     @media (max-width: 768px) {
+      h1 {
+        font-size: 1.5rem;
+      }
+
       .kanban {
         grid-template-columns: 1fr;
+      }
+
+      .column {
+        min-height: 350px;
       }
     }
   </style>
 </head>
 <body>
-  <h1>📋 任务看板</h1>
+  <div class="container">
+    <h1>📋 任务看板</h1>
 
-  <div class="kanban">
-    <div class="column">
-      <div class="column-header">
-        <h2>📝 待领</h2>
-        <span class="task-count" id="count-待领">0</span>
+    <div class="kanban">
+      <div class="column">
+        <div class="column-header">
+          <h2>📝 待领</h2>
+          <span class="task-count" id="count-待领">0</span>
+        </div>
+        <div id="column-待领"></div>
       </div>
-      <div id="column-待领"></div>
+
+      <div class="column">
+        <div class="column-header">
+          <h2>🔄 进行中</h2>
+          <span class="task-count" id="count-进行中">0</span>
+        </div>
+        <div id="column-进行中"></div>
+      </div>
+
+      <div class="column">
+        <div class="column-header">
+          <h2>✅ 已完成</h2>
+          <span class="task-count" id="count-已完成">0</span>
+        </div>
+        <div id="column-已完成"></div>
+      </div>
     </div>
 
-    <div class="column">
-      <div class="column-header">
-        <h2>🔄 进行中</h2>
-        <span class="task-count" id="count-进行中">0</span>
-      </div>
-      <div id="column-进行中"></div>
+    <div class="footer-note">
+      <p>📊 看板基于 <a href="https://github.com/grassroots-project/tasks" target="_blank">GitHub Issues</a> 构建</p>
+      <p><a href="tasks.html">📋 返回任务池</a></p>
     </div>
-
-    <div class="column">
-      <div class="column-header">
-        <h2>✅ 已完成</h2>
-        <span class="task-count" id="count-已完成">0</span>
-      </div>
-      <div id="column-已完成"></div>
-    </div>
-  </div>
-
-  <div class="footer-note">
-    <p>看板基于 <a href="https://github.com/grassroots-project/tasks" target="_blank">GitHub Issues</a> 构建</p>
-    <p><a href="tasks.html">📋 返回任务池</a></p>
   </div>
 
   <script>
@@ -207,7 +246,7 @@
         <div class="task-card" onclick="window.open('${issue.html_url}', '_blank')">
           <div class="task-title">${issue.title}</div>
           <div class="task-meta">
-            ${labels.priority ? `<span class="badge ${labels.priority}">${labels.priority}</span>` : ''}
+            ${labels.priority ? `<span class="badge ${labels.priority}">${labels.priority.toUpperCase()}</span>` : ''}
           </div>
         </div>
       `;
