--- a/kanban.html
+++ b/kanban.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>看板 - Grassroots Project</title>
   <style>
+    /* 导航栏样式（与其他页面保持一致）*/
+    :root {
+      --primary-color: #1a1a1a;
+      --accent-color: #f7931a;
+      --bg-color: #ffffff;
+      --text-color: #333333;
+      --light-gray: #f5f5f5;
+      --border-color: #e0e0e0;
+      --nav-bg: rgba(255, 255, 255, 0.95);
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -14,15 +25,96 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
-      color: #333;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      padding: 20px;
-      min-height: 100vh;
+      color: var(--text-color);
     }
 
+    /* 导航栏 */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: var(--nav-bg);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border-color);
+      padding: 0.8rem 2rem;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    nav .logo {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--primary-color);
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 2rem;
+      align-items: center;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--text-color);
+      transition: all 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+      font-size: 0.95rem;
+    }
+
+    nav a:hover,
+    nav a.active {
+      color: var(--accent-color);
+      font-weight: 500;
+    }
+
+    nav a.active {
+      position: relative;
+    }
+
+    nav a.active::after {
+      content: '';
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: var(--accent-color);
+      border-radius: 1px;
+    }
+
+    /* 汉堡菜单（移动端）*/
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+      padding: 5px;
+    }
+
+    .hamburger span {
+      width: 25px;
+      height: 2px;
+      background: var(--primary-color);
+      transition: all 0.3s;
+    }
+
+    /* 看板页面样式 */
     .container {
-      max-width: 1400px;
-      margin: 0 auto;
+      padding: 20px;
+      padding-top: 100px;
+      min-height: 100vh;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     }
 
     h1 {
@@ -38,6 +130,9 @@
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 20px;
       margin-bottom: 30px;
+      max-width: 1400px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
     .column {
@@ -60,7 +155,7 @@
 
     .column h2 {
       font-size: 1.3rem;
-      color: #1a1a1a;
+      color: var(--primary-color);
       display: flex;
       align-items: center;
       gap: 0.5rem;
@@ -95,7 +190,7 @@
     .task-title {
       font-weight: 600;
       margin-bottom: 10px;
-      color: #1a1a1a;
+      color: var(--primary-color);
       line-height: 1.4;
     }
 
@@ -140,6 +235,8 @@
       border-radius: 12px;
       color: #666;
       font-size: 0.9rem;
+      max-width: 600px;
+      margin: 0 auto 40px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
 
@@ -154,9 +251,86 @@
       color: #764ba2;
     }
 
+    .back-to-top {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      width: 45px;
+      height: 45px;
+      background: white;
+      color: #667eea;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: all 0.3s;
+      z-index: 100;
+    }
+
+    .back-to-top:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.3);
+    }
+
+    .back-to-top.hidden {
+      display: none;
+    }
+
+    /* 响应式 */
     @media (max-width: 768px) {
+      nav {
+        padding: 0.8rem 1rem;
+      }
+
+      nav .logo {
+        font-size: 1.2rem;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
+      nav ul {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: var(--nav-bg);
+        flex-direction: column;
+        padding: 1rem;
+        gap: 0;
+        border-bottom: 1px solid var(--border-color);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      nav ul li {
+        width: 100%;
+      }
+
+      nav ul li a {
+        padding: 0.8rem 1rem;
+        border-radius: 6px;
+      }
+
+      nav ul li a:hover {
+        background: var(--light-gray);
+      }
+
       h1 {
         font-size: 1.5rem;
+      }
+
+      .container {
+        padding: 100px 1rem 1rem;
       }
 
       .kanban {
@@ -166,10 +340,33 @@
       .column {
         min-height: 350px;
       }
+
+      .back-to-top {
+        bottom: 1rem;
+        right: 1rem;
+        width: 40px;
+        height: 40px;
+      }
     }
   </style>
 </head>
 <body>
+  <nav>
+    <a href="index.html" class="logo">🌱 Grassroots Project</a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="nav-menu">
+      <li><a href="index.html">🏠 首页</a></li>
+      <li><a href="about.html">💡 关于</a></li>
+      <li><a href="tasks.html">📋 任务池</a></li>
+      <li><a href="kanban.html" class="active">📊 看板</a></li>
+      <li><a href="join.html">🚀 加入我们</a></li>
+    </ul>
+  </nav>
+
   <div class="container">
     <h1>📋 任务看板</h1>
 
@@ -205,7 +402,30 @@
     </div>
   </div>
 
+  <button class="back-to-top" onclick="scrollToTop()" title="返回顶部">↑</button>
+
   <script>
+    // 移动端菜单切换
+    function toggleMenu() {
+      const menu = document.getElementById('nav-menu');
+      menu.classList.toggle('show');
+    }
+
+    // 返回顶部按钮
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    // 控制返回顶部按钮显示
+    window.addEventListener('scroll', function() {
+      const backToTop = document.querySelector('.back-to-top');
+      if (window.scrollY > 300) {
+        backToTop.classList.remove('hidden');
+      } else {
+        backToTop.classList.add('hidden');
+      }
+    });
+
     const CONFIG = {
       owner: 'grassroots-project',
       repo: 'tasks'
