--- a/tasks.html
+++ b/tasks.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>任务池 - Grassroots Project</title>
   <style>
+    /* 导航栏样式（与其他页面保持一致）*/
+    :root {
+      --primary-color: #1a1a1a;
+      --accent-color: #f7931a;
+      --bg-color: #ffffff;
+      --text-color: #333333;
+      --light-gray: #f5f5f5;
+      --border-color: #e0e0e0;
+      --nav-bg: rgba(255, 255, 255, 0.95);
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -14,20 +25,113 @@
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
       line-height: 1.6;
-      color: #333;
-      background: #f5f5f5;
-      padding: 20px;
+      color: var(--text-color);
+      background-color: var(--light-gray);
     }
 
+    /* 导航栏 */
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: var(--nav-bg);
+      backdrop-filter: blur(10px);
+      border-bottom: 1px solid var(--border-color);
+      padding: 0.8rem 2rem;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+
+    nav .logo {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: var(--primary-color);
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 2rem;
+      align-items: center;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: var(--text-color);
+      transition: all 0.3s;
+      display: flex;
+      align-items: center;
+      gap: 0.4rem;
+      font-size: 0.95rem;
+    }
+
+    nav a:hover,
+    nav a.active {
+      color: var(--accent-color);
+      font-weight: 500;
+    }
+
+    nav a.active {
+      position: relative;
+    }
+
+    nav a.active::after {
+      content: '';
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: var(--accent-color);
+      border-radius: 1px;
+    }
+
+    /* 汉堡菜单（移动端）*/
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+      padding: 5px;
+    }
+
+    .hamburger span {
+      width: 25px;
+      height: 2px;
+      background: var(--primary-color);
+      transition: all 0.3s;
+    }
+
+    /* 主内容 */
     .container {
       max-width: 900px;
-      margin: 0 auto;
+      margin: 80px auto 40px;
+      padding: 0 1.5rem;
     }
 
+    /* 页脚 */
+    footer {
+      text-align: center;
+      padding: 2rem;
+      border-top: 1px solid var(--border-color);
+      color: #666;
+      background: white;
+      margin-top: 40px;
+    }
+
+    /* 任务池页面样式 */
     h1 {
       text-align: center;
       margin-bottom: 30px;
-      color: #1a1a1a;
+      color: var(--primary-color);
       font-size: 2rem;
     }
 
@@ -41,7 +145,7 @@
 
     .filter-btn {
       padding: 8px 16px;
-      border: 2px solid #e0e0e0;
+      border: 2px solid var(--border-color);
       background: white;
       border-radius: 20px;
       cursor: pointer;
@@ -50,9 +154,9 @@
     }
 
     .filter-btn:hover, .filter-btn.active {
-      background: #f7931a;
+      background: var(--accent-color);
       color: white;
-      border-color: #f7931a;
+      border-color: var(--accent-color);
       transform: translateY(-2px);
     }
 
@@ -71,7 +175,7 @@
     }
 
     .task-card:hover {
-      border-color: #f7931a;
+      border-color: var(--accent-color);
       box-shadow: 0 4px 12px rgba(247, 147, 26, 0.2);
       transform: translateY(-2px);
     }
@@ -82,12 +186,12 @@
     }
 
     .task-card h3 a {
-      color: #1a1a1a;
+      color: var(--primary-color);
       text-decoration: none;
     }
 
     .task-card h3 a:hover {
-      color: #f7931a;
+      color: var(--accent-color);
     }
 
     .task-meta {
@@ -115,7 +219,7 @@
     }
 
     .task-description {
-      color: #333;
+      color: var(--text-color);
       margin-bottom: 10px;
       white-space: pre-wrap;
     }
@@ -129,20 +233,6 @@
       text-align: center;
       padding: 40px;
       color: #666;
-    }
-
-    .loading::before {
-      content: '⏳';
-      font-size: 2rem;
-      display: block;
-      margin-bottom: 1rem;
-    }
-
-    .no-tasks::before {
-      content: '📭';
-      font-size: 2rem;
-      display: block;
-      margin-bottom: 1rem;
     }
 
     .bg-red-500 { background: #d73a4a; }
@@ -161,7 +251,7 @@
       align-items: center;
       gap: 0.5rem;
       padding: 12px 24px;
-      background: #f7931a;
+      background: var(--accent-color);
       color: white;
       text-decoration: none;
       border-radius: 6px;
@@ -186,7 +276,7 @@
     }
 
     .footer-note a {
-      color: #f7931a;
+      color: var(--accent-color);
       text-decoration: none;
       font-weight: 500;
     }
@@ -195,23 +285,115 @@
       text-decoration: underline;
     }
 
+    .back-to-top {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      width: 45px;
+      height: 45px;
+      background: var(--accent-color);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.2rem;
+      box-shadow: 0 4px 12px rgba(247, 147, 26, 0.4);
+      transition: all 0.3s;
+      z-index: 100;
+    }
+
+    .back-to-top:hover {
+      background: #e8830f;
+      transform: translateY(-2px);
+    }
+
+    .back-to-top.hidden {
+      display: none;
+    }
+
+    /* 响应式 */
     @media (max-width: 768px) {
+      nav {
+        padding: 0.8rem 1rem;
+      }
+
+      nav .logo {
+        font-size: 1.2rem;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
+      nav ul {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: var(--nav-bg);
+        flex-direction: column;
+        padding: 1rem;
+        gap: 0;
+        border-bottom: 1px solid var(--border-color);
+        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      nav ul li {
+        width: 100%;
+      }
+
+      nav ul li a {
+        padding: 0.8rem 1rem;
+        border-radius: 6px;
+      }
+
+      nav ul li a:hover {
+        background: var(--light-gray);
+      }
+
       h1 {
         font-size: 1.5rem;
       }
 
-      .filters {
-        gap: 8px;
+      .container {
+        margin-top: 100px;
+        padding: 0 1rem;
       }
 
-      .filter-btn {
-        padding: 6px 12px;
-        font-size: 0.85rem;
+      .back-to-top {
+        bottom: 1rem;
+        right: 1rem;
+        width: 40px;
+        height: 40px;
       }
     }
   </style>
 </head>
 <body>
+  <nav>
+    <a href="index.html" class="logo">🌱 Grassroots Project</a>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul id="nav-menu">
+      <li><a href="index.html">🏠 首页</a></li>
+      <li><a href="about.html">💡 关于</a></li>
+      <li><a href="tasks.html" class="active">📋 任务池</a></li>
+      <li><a href="kanban.html">📊 看板</a></li>
+      <li><a href="join.html">🚀 加入我们</a></li>
+    </ul>
+  </nav>
+
   <div class="container">
     <h1>🎯 Grassroots 任务池</h1>
 
@@ -240,7 +422,34 @@
     </div>
   </div>
 
-  <script type="module">
+  <button class="back-to-top" onclick="scrollToTop()" title="返回顶部">↑</button>
+
+  <footer>
+    <p>© 2026 Grassroots Project · 为被低估的个体夺回定价权</p>
+  </footer>
+
+  <script>
+    // 移动端菜单切换
+    function toggleMenu() {
+      const menu = document.getElementById('nav-menu');
+      menu.classList.toggle('show');
+    }
+
+    // 返回顶部按钮
+    function scrollToTop() {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    // 控制返回顶部按钮显示
+    window.addEventListener('scroll', function() {
+      const backToTop = document.querySelector('.back-to-top');
+      if (window.scrollY > 300) {
+        backToTop.classList.remove('hidden');
+      } else {
+        backToTop.classList.add('hidden');
+      }
+    });
+
     // GitHub API 配置
     const CONFIG = {
       owner: 'grassroots-project',
