--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -379,14 +379,14 @@
 </head>
 <body>
   <nav>
-    <a href="index.html" class="logo">🌱 Grassroots Project</a>
+    <a href="../index.html" class="logo">🌱 Grassroots Project</a>
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
       <span></span>
       <span></span>
     </div>
     <ul id="nav-menu">
-      <li><a href="index.html">🏠 首页</a></li>
+      <li><a href="../index.html">🏠 首页</a></li>
       <li><a href="about.html">💡 关于</a></li>
       <li><a href="tasks.html" class="active">📋 任务池</a></li>
       <li><a href="kanban.html">📊 看板</a></li>
