--- a/pages/join.html
+++ b/pages/join.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>加入我们 - Grassroots Project</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
 <body>
   <nav>
-    <a href="index.html" class="logo">🌱 Grassroots Project</a>
+    <a href="../index.html" class="logo">🌱 Grassroots Project</a>
     <div class="hamburger" onclick="toggleMenu()">
       <span></span>
       <span></span>
       <span></span>
     </div>
     <ul id="nav-menu">
-      <li><a href="index.html">🏠 首页</a></li>
+      <li><a href="../index.html">🏠 首页</a></li>
       <li><a href="about.html">💡 关于</a></li>
       <li><a href="tasks.html">📋 任务池</a></li>
       <li><a href="kanban.html">📊 看板</a></li>
@@ -25,7 +25,7 @@
 
   <main>
     <div class="breadcrumb">
-      <a href="index.html">首页</a>
+      <a href="../index.html">首页</a>
       <span>›</span>
       <span>加入我们</span>
     </div>
