Add task creation form page with GitHub API integration

--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -398,7 +398,7 @@
     <h1>🎯 Grassroots 任务池</h1>
 
     <div class="create-task">
-      <a href="https://github.com/grassroots-project/tasks/issues/new?template=task_template.md" target="_blank">
+      <a href="add-task.html">
         ✨ 添加任务
       </a>
     </div>
