feat: 添加人池和资源池独立页面
- 新增 people.html: 展示人池 Issue (#1) 内容
- 新增 resources.html: 展示资源池 Issue (#2) 内容
- 任务池和看板过滤掉人池/资源池标签的 Issue
- 所有页面导航栏添加人池和资源池链接
- 使用 marked.js 渲染 Markdown 内容

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <li><a href="pages/about.html">💡 关于</a></li>
       <li><a href="pages/tasks.html">📋 任务池</a></li>
       <li><a href="pages/kanban.html">📊 看板</a></li>
+      <li><a href="pages/people.html">👥 人池</a></li>
+      <li><a href="pages/resources.html">📦 资源池</a></li>
       <li><a href="pages/join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
