--- a/pages/about.html
+++ b/pages/about.html
@@ -19,6 +19,8 @@
       <li><a href="about.html" class="active">💡 关于</a></li>
       <li><a href="tasks.html">📋 任务池</a></li>
       <li><a href="kanban.html">📊 看板</a></li>
+      <li><a href="people.html">👥 人池</a></li>
+      <li><a href="resources.html">📦 资源池</a></li>
       <li><a href="join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
