feat: 添加 AI 助手页面（Kimi API）
- 新增 assistant.html: 对话式 AI 助手
- 集成 Kimi (Moonshot) API
- 用户自己输入 API key，存本地
- 内置项目知识库（愿景、三条腿、加入流程等）
- 动态加载任务列表用于推荐
- 快捷问题按钮
- 所有页面导航栏添加 AI 助手入口

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="pages/kanban.html">📊 看板</a></li>
       <li><a href="pages/people.html">👥 人池</a></li>
       <li><a href="pages/resources.html">📦 资源池</a></li>
+      <li><a href="pages/assistant.html">🤖 AI 助手</a></li>
       <li><a href="pages/join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
