--- a/pages/kanban.html
+++ b/pages/kanban.html
@@ -365,6 +365,7 @@
       <li><a href="kanban.html" class="active">📊 看板</a></li>
       <li><a href="people.html">👥 人池</a></li>
       <li><a href="resources.html">📦 资源池</a></li>
+      <li><a href="assistant.html">🤖 AI 助手</a></li>
       <li><a href="join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
