--- a/pages/tasks.html
+++ b/pages/tasks.html
@@ -675,6 +675,7 @@
       <li><a href="kanban.html">📊 看板</a></li>
       <li><a href="people.html">👥 人池</a></li>
       <li><a href="resources.html">📦 资源池</a></li>
+      <li><a href="assistant.html">🤖 AI 助手</a></li>
       <li><a href="join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
