--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="pages/about.html">💡 关于</a></li>
       <li><a href="pages/tasks.html">📋 任务池</a></li>
       <li><a href="pages/kanban.html">📊 看板</a></li>
-      <li><a href="pages/people.html">👥 人池</a></li>
+      <li><a href="pages/people.html">👥 人才库</a></li>
       <li><a href="pages/resources.html">📦 资源池</a></li>
       <li><a href="pages/assistant.html">🤖 AI 助手</a></li>
       <li><a href="pages/join.html">🚀 加入我们</a></li>
@@ -55,7 +55,7 @@
 
       <a href="pages/people.html" class="quick-link">
         <span class="icon">👥</span>
-        <span class="title">人池</span>
+        <span class="title">人才库</span>
         <span class="desc">成员技能、贡献记录</span>
       </a>
 
@@ -120,7 +120,7 @@
     <ul class="bullet-list">
       <li><strong>任务池</strong>：开放任务，任何人可以添加</li>
       <li><strong>资源池</strong>：比特币、知识、工具、人力</li>
-      <li><strong>人池</strong>：技能、时间、当前参与、历史贡献</li>
+      <li><strong>人才库</strong>：技能、时间、当前参与、历史贡献</li>
     </ul>
 
     <p><strong>自由组合 + AI引导，价值在博弈中发现。</strong></p>
