--- a/pages/join.html
+++ b/pages/join.html
@@ -19,7 +19,7 @@
       <li><a href="about.html">💡 关于</a></li>
       <li><a href="tasks.html">📋 任务池</a></li>
       <li><a href="kanban.html">📊 看板</a></li>
-      <li><a href="people.html">👥 人池</a></li>
+      <li><a href="people.html">👥 人才库</a></li>
       <li><a href="resources.html">📦 资源池</a></li>
       <li><a href="join.html" class="active">🚀 加入我们</a></li>
     </ul>
