--- a/pages/resources.html
+++ b/pages/resources.html
@@ -425,7 +425,7 @@
       <li><a href="about.html">💡 关于</a></li>
       <li><a href="tasks.html">📋 任务池</a></li>
       <li><a href="kanban.html">📊 看板</a></li>
-      <li><a href="people.html">👥 人池</a></li>
+      <li><a href="people.html">👥 人才库</a></li>
       <li><a href="resources.html" class="active">📦 资源池</a></li>
       <li><a href="assistant.html">🤖 AI 助手</a></li>
       <li><a href="join.html">🚀 加入我们</a></li>
