--- a/pages/add-task.html
+++ b/pages/add-task.html
@@ -337,7 +337,7 @@
   <button class="back-to-top" onclick="scrollToTop()" title="返回顶部">↑</button>
 
   <footer>
-    <p>© 2026 Grassroots Project · 为被低估的个体夺回定价权</p>
+    <p>© 2026 Grassroots Project · 为被低估的人争取应有的价值</p>
   </footer>
 
   <script>
