文案口号化

--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
     <h1>关于 Grassroots</h1>
 
     <h2>使命</h2>
-    <p>为被低估的人提供争取应有价值的协作平台。</p>
+    <p>为被低估的人，搭建拿回价值的平台。</p>
 
     <h2>愿景</h2>
     <p>构建一个价值被发现的网络，让每个参与者都能通过协作获得非线性成长。</p>
@@ -49,7 +49,7 @@
 
     <ul class="bullet-list">
       <li><strong>价值不是被赋予的，是被发现的</strong></li>
-      <li><strong>市场博弈是底层群体拿回应有价值的机制</strong></li>
+      <li><strong>市场博弈是底层群体，拿回价值的机制</strong></li>
       <li><strong>不是慈善，是乘法</strong></li>
     </ul>
 
@@ -135,7 +135,7 @@
   <button class="back-to-top" onclick="scrollToTop()" title="返回顶部">↑</button>
 
   <footer>
-    <p>© 2026 Grassroots Project · 为被低估的人争取应有的价值</p>
+    <p>© 2026 Grassroots Project · 为被低估的人，拿回价值</p>
   </footer>
 
   <script>
