--- a/pages/assistant.html
+++ b/pages/assistant.html
@@ -575,8 +575,8 @@
 # Grassroots Project 知识库
 
 ## 项目简介
-Grassroots Project 是一个为被低估的人提供争取应有价值的协作平台的项目。
-- **使命**：为被低估的人提供争取应有价值的协作平台
+Grassroots Project 是一个为被低估的人，搭建拿回价值的平台的项目。
+- **使命**：为被低估的人，搭建拿回价值的平台
 - **愿景**：构建一个价值被发现的网络，让每个参与者都能通过协作获得非线性成长
 - **核心主张**：价值不是被赋予的，是被发现的
 
