Fix navigation links in resources.html and people.html

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -361,13 +361,13 @@
     </div>
     <ul id="nav-menu">
       <li><a href="../index.html">🏠 首页</a></li>
-      <li><a href="../about.html">💡 关于</a></li>
-      <li><a href="../tasks.html">📋 任务池</a></li>
-      <li><a href="../kanban.html">📊 看板</a></li>
-      <li><a href="../people.html">👥 人才库</a></li>
-      <li><a href="../resources.html" class="active">📦 资源池</a></li>
-      <li><a href="../assistant.html">🤖 AI 助手</a></li>
-      <li><a href="../join.html">🚀 加入我们</a></li>
+      <li><a href="about.html">💡 关于</a></li>
+      <li><a href="tasks.html">📋 任务池</a></li>
+      <li><a href="kanban.html">📊 看板</a></li>
+      <li><a href="people.html">👥 人才库</a></li>
+      <li><a href="resources.html" class="active">📦 资源池</a></li>
+      <li><a href="assistant.html">🤖 AI 助手</a></li>
+      <li><a href="join.html">🚀 加入我们</a></li>
     </ul>
   </nav>
 
