update: 加入流程改为 GitHub Issue 申请（一键提交）

--- a/pages/join.html
+++ b/pages/join.html
@@ -127,20 +127,20 @@
     <h2>如何开始？</h2>
 
     <ol>
-      <li><strong>回答以上筛选问题</strong></li>
-      <li><strong>发送你的答案</strong>到：<code>xiaoping.tang@gmail.com</code></li>
-      <li>我们会在 <strong>2-3 天内</strong>回复你</li>
-      <li>加入任务池，选择你想做的任务</li>
-      <li>开始协作，更新任务进度</li>
+      <li><strong>注册 GitHub 账号</strong>（如果还没有）：<a href="https://github.com/signup" target="_blank">github.com/signup</a></li>
+      <li><strong>提交申请</strong>：点击下方按钮，填写申请表单（包含上述问题）</li>
+      <li>我们会在 <strong>2-3 天内</strong>审核你的申请</li>
+      <li>审核通过后，系统<strong>自动</strong>将你加入人才库</li>
+      <li>开始认领任务，参与协作</li>
     </ol>
 
     <hr>
 
     <div class="card" style="background: linear-gradient(135deg, #f7931a20, #f7931a40);">
-      <h3>📧 联系方式</h3>
-      <p><strong>邮箱：</strong>xiaoping.tang@gmail.com</p>
-      <p><strong>标题：</strong>加入 Grassroots - [你的名字]</p>
-      <p><strong>内容：</strong>你对上述5个问题的回答</p>
+      <h3>🚀 一键申请</h3>
+      <p>点击下方按钮，在 GitHub 上提交你的申请。填写表单即可，无需懂 Git。</p>
+      <a href="https://github.com/grassroots-project/tasks/issues/new?template=join_request.yml" target="_blank" class="btn" style="margin-top: 1rem;">📝 提交申请</a>
+      <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.7;">也可以邮件联系：xiaoping.tang@gmail.com</p>
     </div>
 
     <hr>
