style: 优化加入页面版式（grid布局+色彩标识）

--- a/pages/join.html
+++ b/pages/join.html
@@ -41,50 +41,58 @@
 
     <h2>你能得到什么？</h2>
 
-    <div class="card">
-      <h3>🌱 短期（1-3个月）</h3>
-      <ul class="bullet-list">
-        <li>技能提升：通过协作学习</li>
-        <li>认知升级：AI辅助理解复杂问题</li>
-        <li>真实连接：找到同频的人</li>
-      </ul>
-    </div>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1rem;">
+      <div class="card" style="border-left: 3px solid #4ade80;">
+        <h3>🌱 短期（1-3个月）</h3>
+        <ul class="bullet-list">
+          <li>技能提升：通过协作学习</li>
+          <li>认知升级：AI辅助理解复杂问题</li>
+          <li>真实连接：找到同频的人</li>
+        </ul>
+      </div>
 
-    <div class="card">
-      <h3>🌿 中期（3-6个月）</h3>
-      <ul class="bullet-list">
-        <li>从被动到主动：自己找事做</li>
-        <li>可见的进步：贡献记录上链</li>
-        <li>协作网络：与他人深度协作</li>
-      </ul>
-    </div>
+      <div class="card" style="border-left: 3px solid #facc15;">
+        <h3>🌿 中期（3-6个月）</h3>
+        <ul class="bullet-list">
+          <li>从被动到主动：自己找事做</li>
+          <li>可见的进步：贡献记录上链</li>
+          <li>协作网络：与他人深度协作</li>
+        </ul>
+      </div>
 
-    <div class="card">
-      <h3>🌳 长期（6个月+）</h3>
-      <ul class="bullet-list">
-        <li>非线性成长：三条腿相乘的机会</li>
-        <li>身份认同：不可篡改的贡献历史</li>
-        <li>参与更大的事：从个人到共同体</li>
-      </ul>
+      <div class="card" style="border-left: 3px solid #f7931a;">
+        <h3>🌳 长期（6个月+）</h3>
+        <ul class="bullet-list">
+          <li>非线性成长：三条腿相乘的机会</li>
+          <li>身份认同：不可篡改的贡献历史</li>
+          <li>参与更大的事：从个人到共同体</li>
+        </ul>
+      </div>
     </div>
 
     <hr>
 
     <h2>我们需要什么？</h2>
 
-    <h3>我们想要的人</h3>
-    <ul class="bullet-list">
-      <li><strong>接受不确定性</strong>：这里没有确定的回报</li>
-      <li><strong>主动努力</strong>：不等待指令，自己找事做</li>
-      <li><strong>真实反馈</strong>：从底层视角提供真实问题</li>
-    </ul>
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 1.5rem;">
+      <div class="card" style="border-left: 3px solid #4ade80;">
+        <h3>✅ 我们想要的人</h3>
+        <ul class="bullet-list">
+          <li><strong>接受不确定性</strong>：这里没有确定的回报</li>
+          <li><strong>主动努力</strong>：不等待指令，自己找事做</li>
+          <li><strong>真实反馈</strong>：从底层视角提供真实问题</li>
+        </ul>
+      </div>
 
-    <h3>我们不想要的人</h3>
-    <ul class="bullet-list">
-      <li>寻求确定性：需要稳定承诺的</li>
-      <li>被动等待：等别人分配任务的</li>
-      <li>道德绑架：用情怀绑架他人的</li>
-    </ul>
+      <div class="card" style="border-left: 3px solid #ef4444;">
+        <h3>❌ 我们不想要的人</h3>
+        <ul class="bullet-list">
+          <li>寻求确定性：需要稳定承诺的</li>
+          <li>被动等待：等别人分配任务的</li>
+          <li>道德绑架：用情怀绑架他人的</li>
+        </ul>
+      </div>
+    </div>
 
     <hr>
 
