fix: 修复如何开始有序列表左侧突出

--- a/pages/join.html
+++ b/pages/join.html
@@ -98,9 +98,9 @@
 
     <h2>如何开始？</h2>
 
-    <ol>
+    <ol style="padding-left: 1.2em;">
       <li><strong>注册 GitHub 账号</strong>（如果还没有）：<a href="https://github.com/signup" target="_blank">github.com/signup</a></li>
-      <li><strong>提交申请</strong>：点击下方按钮，填写申请表单（包含上述问题）</li>
+      <li><strong>提交申请</strong>：点击下方按钮，填写申请表单</li>
       <li>我们会在 <strong>2-3 天内</strong>审核你的申请</li>
       <li>审核通过后，系统<strong>自动</strong>将你加入人才库</li>
       <li>开始认领任务，参与协作</li>
